--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -5,6 +5,9 @@ body {
 	background-color: #f8f9fa;
 }
 
+
+
+
 .navbar {
 	background-color: #333;
 }
@@ -38,7 +41,9 @@ footer {
 }
 
 .search-container {
-	margin: 50px 0;
+	width: 80%;
+	max-width: 800px;
+	margin: 50px auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -53,14 +58,15 @@ footer {
 	width: 50%;
 }
 
-.search-container button {
-	padding: 10px 20px;
-	border: none;
-	border-radius: 25px;
-	background-color: #28a745;
-	color: white;
-	cursor: pointer;
+.search-button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 25px;
+    background-color: #28a745;
+    color: white;
+    cursor: pointer;
 }
+
 
 .product-card {
 	width: 80%;
@@ -73,15 +79,15 @@ footer {
 }
 
 .product-card img {
-	width: 50%;
-	height: 100%;
+	width: 70%;
+	height: 80%;
 	object-fit: contain;
-	padding: 10px;
+	margin-left: 100px;
 }
 
 .product-card .card-body {
-	width: 50%;
-	padding: 20px;
+	width: 30%;
+	margin: 10%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
